New Crowdin updates (#11007)
* fix: New Chinese Simplified translations from Crowdin [ci skip]

* fix: New Italian translations from Crowdin [ci skip]

* fix: New Romanian translations from Crowdin [ci skip]

* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip]

* fix: New German translations from Crowdin [ci skip]

* fix: New Hebrew translations from Crowdin [ci skip]

* fix: New Hungarian translations from Crowdin [ci skip]

* fix: New Italian translations from Crowdin [ci skip]

* fix: New Japanese translations from Crowdin [ci skip]

* fix: New Korean translations from Crowdin [ci skip]

* fix: New Dutch translations from Crowdin [ci skip]

* fix: New Polish translations from Crowdin [ci skip]

* fix: New Portuguese translations from Crowdin [ci skip]

* fix: New Swedish translations from Crowdin [ci skip]

* fix: New Turkish translations from Crowdin [ci skip]

* fix: New Ukrainian translations from Crowdin [ci skip]

* fix: New Chinese Simplified translations from Crowdin [ci skip]

* fix: New Chinese Traditional translations from Crowdin [ci skip]

* fix: New Vietnamese translations from Crowdin [ci skip]

* fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

* fix: New Indonesian translations from Crowdin [ci skip]

* fix: New Persian translations from Crowdin [ci skip]

* fix: New Thai translations from Crowdin [ci skip]

* fix: New English, United Kingdom translations from Crowdin [ci skip]

* fix: New Norwegian Bokmal translations from Crowdin [ci skip]

* fix: New Dutch translations from Crowdin [ci skip]

* fix: New Romanian translations from Crowdin [ci skip]

* fix: New French translations from Crowdin [ci skip]

* fix: New Spanish translations from Crowdin [ci skip]

* fix: New Czech translations from Crowdin [ci skip]

* fix: New Danish translations from Crowdin [ci skip

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
   "Link copied": "Link wurde kopiert",
+  "Download revision": "Download revision",
   "Dark": "Dunkel",
   "Light": "Hell",
   "System": "System",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} veröffentlichte",
   "{{userName}} unpublished": "{{userName}} nicht veröffentlicht",
   "{{userName}} moved": "{{userName}} verschob",
-  "Export started": "Export gestartet",
   "Your file will be available in {{ location }} soon": "Ihre Datei wird in Kürze unter {{ location }} verfügbar sein",
   "View": "Anzeigen",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Export gestartet",
   "A ZIP file containing the images, and documents in the Markdown format.": "Eine ZIP-Datei, die die Bilder und Dokumente im Markdown Format enthält.",
   "A ZIP file containing the images, and documents as HTML files.": "Eine ZIP-Datei, die die Bilder und Dokumente im HTML Format enthält.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturierte Daten, die verwendet werden können, um Daten an eine andere kompatible {{ appName }} Instanz zu übertragen.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m gelesen",
   "Revision deleted": "Überarbeitung gelöscht",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktuelle Version",
   "{{userName}} edited": "{{userName}} bearbeitete",
   "Revision options": "Version-Einstellungen",
@@ -709,6 +713,12 @@
   "Add a description": "Beschreibung hinzufügen",
   "Signing in": "Wird angemeldet",
   "You can safely close this window once the Outline desktop app has opened": "Du kannst dieses Fenster schließen, sobald die Outline Desktop-App geöffnet wurde",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Fehler beim Erstellen des Kommentars",
   "Add a comment": "Kommentar hinzufügen",
   "Add a reply": "Antwort hinzufügen",
@@ -756,6 +766,7 @@
   "Archived": "Archiviert",
   "Save draft": "Entwurf speichern",
   "Restore version": "Version wiederherstellen",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Noch keine Historie",
   "Source": "Quelle",
   "Created": "Erstellt",
@@ -886,6 +897,7 @@
   "Triggers": "Auslöser",
   "Mention users and more": "Erwähne Benutzer und mehr",
   "Insert block": "Block einfügen",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Anmelden",
   "Continue with Email": "Weiter mit E-Mail",
   "Continue with {{ authProviderName }}": "Weiter mit {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Mitgliedern erlauben, sich mit ihrer E-Mail-Adresse anzumelden",
   "The server must have SMTP configured to enable this setting": "Der Server muss SMTP konfiguriert haben, um diese Einstellung zu aktivieren",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "von {{ name }}",
+  "Expired": "Abgelaufen",
   "Last used": "Zuletzt verwendet",
   "No expiry": "Kein Verfall",
   "Restricted scope": "Eingeschränkter Bereich",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Wird ausgeführt",
-  "Expired": "Abgelaufen",
   "Completed": "Erledigt",
   "Failed": "Fehlgeschlagen",
   "All collections": "Alle Sammlungen",
@@ -1083,7 +1097,6 @@
   "Date created": "Erstellungsdatum",
   "Crop Image": "Bild zuschneiden",
   "Crop image": "Bild zuschneiden",
-  "How does this work?": "Wie funktioniert das?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kannst eine ZIP-Datei importieren, die zuvor mithilfe der JSON-Export Funktion exportiert wurde. Öffne dazu in {{ appName }} <em>Exportieren</em> in der Seitenleiste Einstellungen und klicke auf <em>Daten exportieren</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Drag-and-Drop die Zip-Datei von JSON-Export Funktion in {{appName}}, oder klicke auf Upload",
   "Canceled": "Abgesagt",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Erfordert die Einladung von Mitgliedern in den Arbeitsbereich, bevor sie ein Konto mit SSO erstellen können.",
   "Default role": "Standard-Rolle",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Die Standardrolle für neue Benutzer. Das Ändern dieser Einstellung wirkt sich nicht auf bestehende Benutzerkonten aus.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Wenn diese Option aktiviert ist, können Dokumente von jedem Arbeitsbereichs-Mitglied öffentlich im Internet geteilt werden",
   "Viewer document exports": "Betrachter können Dokumente exportieren",
   "When enabled, viewers can see download options for documents": "Wenn diese Option aktiviert ist, können Betrachter Download-Optionen für Dokumente sehen",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Eine ID, welche die Website in Ihrer Matomo-Instanz eindeutig identifiziert.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Huch, du musst die Berechtigungen in Notion akzeptieren, um {{ appName }} mit deinem Arbeitsbereich zu verbinden. Möchtest du es noch einmal versuchen?",
   "Import pages from Notion": "Importieren Sie Seiten von Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Zu Slack hinzufügen",
   "document published": "Dokument veröffentlicht",
   "document updated": "Dokument aktualisiert",
