--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "برنامه جدید",
   "This version of the document was deleted": "این نسخه از سند حذف شده است",
   "Link copied": "لینک کپی شد",
+  "Download revision": "Download revision",
   "Dark": "تیره",
   "Light": "روشن",
   "System": "سامانه",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} منتشر شد",
   "{{userName}} unpublished": "{{userName}} منتشر نشده",
   "{{userName}} moved": "{{userName}} منتقل شد",
-  "Export started": "فرآیند خروجی گرفتن آغاز شد",
   "Your file will be available in {{ location }} soon": "فایل شما به زودی در {{ location }} دردسترس خواهد بود",
   "View": "مشاهده",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "فرآیند خروجی گرفتن آغاز شد",
   "A ZIP file containing the images, and documents in the Markdown format.": "فایلی ZIP شامل تصاویر و اسناد به فرمت Markdown",
   "A ZIP file containing the images, and documents as HTML files.": "فایلی ZIP شامل تصاویر و اسناد به فرمت HTML",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "داده‌های ساختاریافته که می‌توان برای انتقال به یک نمونه سازگار دیگر از {{ appName }} استفاده کرد",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} دقیقه مطالعه",
   "Revision deleted": "نسخه حذف شد",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "نسخه فعلی",
   "{{userName}} edited": "{{userName}} ویرایش شد",
   "Revision options": "گزینه‌های بازنگری‌ها",
@@ -709,6 +713,12 @@
   "Add a description": "توضیحاتی اضافه کنید",
   "Signing in": "در حال ورود",
   "You can safely close this window once the Outline desktop app has opened": "پس از باز شدن برنامه دسکتاپ Outline می‌توانید این پنجره را با اطمینان ببندید",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "خطا در ایجاد نظر",
   "Add a comment": "افزودن نظر",
   "Add a reply": "افزودن پاسخ",
@@ -756,6 +766,7 @@
   "Archived": "بایگانی شده",
   "Save draft": "ذخیره پیش‌نویس",
   "Restore version": "بازیابی نسخه",
+  "Highlight changes": "Highlight changes",
   "No history yet": "هیچ سابقه‌ای وجود ندارد",
   "Source": "منبع",
   "Created": "ایجاد شده",
@@ -886,6 +897,7 @@
   "Triggers": "محرک‌ها",
   "Mention users and more": "منشن کاربران و بیشتر",
   "Insert block": "افزودن بلوک",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "ورود",
   "Continue with Email": "ادامه با ایمیل",
   "Continue with {{ authProviderName }}": "با {{ authProviderName }} ادامه دهید",
@@ -1017,8 +1029,11 @@
   "Connect": "اتصال",
   "Allow members to sign-in using their email address": "اجازه به اعضا برای ورود با استفاده از آدرس ایمیل خود",
   "The server must have SMTP configured to enable this setting": "برای استفاده از این تنظیمات، سرور باید تنظیمات SMTP را داشته باشد",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "توسط {{ name }}",
+  "Expired": "منقضی شده",
   "Last used": "آخرین بار استفاده شده",
   "No expiry": "بدون انقضا",
   "Restricted scope": "دامنه محدود",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "در حال پردازش",
-  "Expired": "منقضی شده",
   "Completed": "تکمیل شد",
   "Failed": "ناموفق",
   "All collections": "همه مجموعه ها",
@@ -1083,7 +1097,6 @@
   "Date created": "تاریخ ایجاد",
   "Crop Image": "برش تصویر",
   "Crop image": "برش تصویر",
-  "How does this work?": "این چگونه کار می‌کند؟",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "شما می‌توانید یک فایل zip را که قبلاً از گزینه JSON در یک نمونه دیگر خروجی شده است وارد کنید. در {{ appName }}, <em>Export</em> را در نوار کناری تنظیمات باز کنید و روی <em>Export Data</em> کلیک کنید.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "فایل zip را از گزینه خروجی ها JSON در {{appName}} بکشید و رها کنید یا برای بارگذاری کلیک کنید",
   "Canceled": "لغو شد",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "الزام اعضا به دعوت شدن به فضای کاری قبل از اینکه بتوانند با استفاده از SSO یک حساب کاربری ایجاد کنند.",
   "Default role": "نقش پیش‌فرض",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "نقش پیش‌فرض کاربر برای حساب‌های جدید. تغییر این تنظیمات بر حساب‌های کاربری موجود تأثیری نخواهد داشت.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "هنگامی که فعال باشد، هر عضو فضای کاری می‌تواند اسناد را به صورت عمومی در اینترنت به اشتراک بگذارد.",
   "Viewer document exports": "خروجی ها اسناد برای مشاهده‌گران",
   "When enabled, viewers can see download options for documents": "هنگامی که فعال باشد، مشاهده‌گران می‌توانند گزینه‌های دانلود برای اسناد را ببینند.",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "شناسه‌ای که سایت را در نمونه Matomo شما به‌صورت یکتا شناسایی می‌کند.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "اوه! برای اتصال {{appName}} به فضای کاری خود، باید دسترسی‌های Notion را تأیید کنید. دوباره تلاش کنید؟",
   "Import pages from Notion": "ایمپورت اسناد از Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "افزودن به Slack",
   "document published": "سند منتشر شد",
   "document updated": "سند به روز شد",
