--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -138,12 +138,13 @@
   "Log out": "Log out",
   "Mark notifications as read": "Segnare tutte le notifiche come lette",
   "Archive all notifications": "Archivia tutte le notifiche",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Segna come letto",
+  "Mark as unread": "Segna come non letto",
   "New App": "New App",
   "New Application": "Nuova Applicazione",
   "This version of the document was deleted": "Questa versione del documento è stata eliminata",
   "Link copied": "Collegamento copiato",
+  "Download revision": "Download revision",
   "Dark": "Scuro",
   "Light": "Chiaro",
   "System": "Sistema",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} pubblicato",
   "{{userName}} unpublished": "{{userName}} ha annullato la pubblicazione",
   "{{userName}} moved": "{{userName}} ha spostato",
-  "Export started": "Esportazione avviata",
   "Your file will be available in {{ location }} soon": "Il tuo file sarà disponibile presto in {{ location }}",
   "View": "Visualizza",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Esportazione avviata",
   "A ZIP file containing the images, and documents in the Markdown format.": "Un file ZIP contenente le immagini e i documenti nel formato Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Un file ZIP contenente le immagini e documenti come file HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Dati strutturati che possono essere utilizzati per trasferire i dati a un'altra istanza {{ appName }} compatibile.",
@@ -353,12 +355,12 @@
   "Sorry, an error occurred.": "Spiacenti, si è verificato un errore.",
   "Click to retry": "Clicca per riprovare",
   "Back": "Indietro",
-  "Notification options": "Notification options",
+  "Notification options": "Opzioni di notifica",
   "Unknown": "Sconosciuto",
-  "Mentions": "Mentions",
-  "Comments and replies": "Comments and replies",
-  "Document events": "Document events",
-  "Collection events": "Collection events",
+  "Mentions": "Menzioni",
+  "Comments and replies": "Commenti e risposte",
+  "Document events": "Eventi del documento",
+  "Collection events": "Raccolta eventi",
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
   "Client type": "Tipo di cliente",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h letto",
   "{{ minutes }}m read": "{{ minutes }} minuti di lettura",
   "Revision deleted": "Revisione eliminata",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versione corrente",
   "{{userName}} edited": "{{userName}} modificato",
   "Revision options": "Opzioni revisione",
@@ -474,7 +478,7 @@
   "Change permissions?": "Modificare i permessi?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "Impossibile spostare {{ documentName }} all'interno di {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Non è possibile riordinare i documenti in una raccolta ordinata alfabeticamente",
-  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} non può essere spostato qui",
   "Return to App": "Torna all'applicazione",
   "Installation": "Installazione",
   "Unstar document": "Rimuovi dai preferiti",
@@ -555,7 +559,7 @@
   "Italic": "Corsivo",
   "Sorry, that link won’t work for this embed type": "Siamo spiacenti, questo link non funzionerà per questo tipo di embed",
   "File attachment": "File allegato",
-  "Embed PDF": "Embed PDF",
+  "Embed PDF": "Incorpora PDF",
   "Enter a link": "Inserisci un link",
   "Big heading": "Titolo grande",
   "Medium heading": "Titolo medio",
@@ -617,7 +621,7 @@
   "Account": "Account",
   "API & Apps": "API & Applicazioni",
   "Details": "Dettagli",
-  "Authentication": "Authentication",
+  "Authentication": "Autenticazione",
   "Security": "Sicurezza",
   "Features": "Caratteristiche",
   "Members": "Membri",
@@ -709,6 +713,12 @@
   "Add a description": "Aggiungi una descrizione",
   "Signing in": "Accesso in corso",
   "You can safely close this window once the Outline desktop app has opened": "È possibile chiudere in modo sicuro questa finestra una volta aperta l'applicazione desktop Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Errore durante la creazione del commento",
   "Add a comment": "Aggiungi un commento",
   "Add a reply": "Aggiungi una risposta",
@@ -756,6 +766,7 @@
   "Archived": "Archiviati",
   "Save draft": "Salva bozza",
   "Restore version": "Ripristina versione",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
   "Created": "Creato",
@@ -886,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Menziona utenti e altro ancora",
   "Insert block": "Inserisci blocco",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Accedi",
   "Continue with Email": "Continua con email",
   "Continue with {{ authProviderName }}": "Continua con {{ authProviderName }}",
@@ -1006,19 +1018,22 @@
   "Where users are redirected to authorize this app": "Dove gli utenti vengono reindirizzati per autorizzare questa app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Le applicazioni consentono di creare integrazioni interne o pubbliche con Outline e di fornire accesso sicuro tramite OAuth. Per maggiori dettagli, consulta la <em>documentazione per gli sviluppatori</em>.",
   "Settings saved": "Impostazioni salvate",
-  "Are you sure?": "Are you sure?",
-  "Removing": "Removing",
-  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
-  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Are you sure?": "Sei sicuro?",
+  "Removing": "Rimozione",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "La rimozione di questo provider di autenticazione impedirà ai membri di accedere con {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Gestisci il modo in cui i membri accedono al tuo spazio di lavoro e quali provider di autenticazione sono abilitati.",
   "Allow members to sign-in with {{ authProvider }}": "Consenti ai membri di accedere con {{ authProvider }}",
-  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connetti {{authProvider}} per consentire ai membri di accedere",
   "Connected": "Connesso",
   "Disabled": "Disattivato",
   "Connect": "Connetti",
   "Allow members to sign-in using their email address": "Consenti ai membri di accedere utilizzando il loro indirizzo email",
   "The server must have SMTP configured to enable this setting": "Il server deve disporre di SMTP configurato per abilitare questa impostazione",
-  "Restrictions": "Restrictions",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
+  "Restrictions": "Restrizioni",
   "by {{ name }}": "di {{ name }}",
+  "Expired": "Scaduto",
   "Last used": "Ultimo utilizzo",
   "No expiry": "Nessuna scadenza",
   "Restricted scope": "Campo limitato",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Impossibile esportare i membri",
   "Download CSV": "Scarica CSV",
   "Processing": "In corso",
-  "Expired": "Scaduto",
   "Completed": "Completato",
   "Failed": "Fallito",
   "All collections": "Tutte le raccolte",
@@ -1083,7 +1097,6 @@
   "Date created": "Data creazione",
   "Crop Image": "Ritaglia immagine",
   "Crop image": "Ritaglia immagine",
-  "How does this work?": "Come funziona?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "È possibile importare un file zip precedentemente esportato con l'opzione JSON in un'altra istanza. Su {{ appName }} apri <em>Esporta</em> nella barra laterale delle impostazioni e fai clic su <em>Esporta dati</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Trascina e rilascia il file zip dall'export JSON in {{appName}} o fai clic per caricarlo",
   "Canceled": "Annullato",
@@ -1220,13 +1233,14 @@
   "Are you sure you want to require invites?": "Sei sicuro di voler richiedere gli inviti?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "I nuovi utenti dovranno prima essere invitati a creare un account. Le opzioni <em>Ruolo predefinito</em> e <em>Domini consentiti</em> non saranno più applicabili.",
   "Settings that impact the access, security, and content of your workspace.": "Impostazioni che incidono sull'accesso, sulla sicurezza e sul contenuto dell'area di lavoro.",
-  "Invites": "Invites",
+  "Invites": "Inviti",
   "Allow users to send invites": "Permetti agli utenti di mandare inviti",
   "Allow editors to invite other people to the workspace": "Permetti agli editori d'invitare altri utenti nello spazio di lavoro",
   "Require invites": "Richiedi inviti",
   "Require members to be invited to the workspace before they can create an account using SSO.": "Richiedi ai membri di essere invitati all'area di lavoro prima che possano creare un account utilizzando SSO.",
   "Default role": "Ruolo predefinito",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Il ruolo utente predefinito per i nuovi account. La modifica di questa impostazione non influisce sugli account utente esistenti.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Se abilitato, i documenti possono essere condivisi pubblicamente su Internet da qualsiasi membro dell'area di lavoro",
   "Viewer document exports": "Esportazioni di documenti per visualizzatori",
   "When enabled, viewers can see download options for documents": "Se abilitato, i visualizzatori possono vedere le opzioni di download per i documenti",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Un ID che identifica in modo univoco il sito web nella tua istanza Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Ops, devi accettare le autorizzazioni in Notion per connettere {{ appName }} al tuo spazio di lavoro. Riprovare?",
   "Import pages from Notion": "Importa pagine da Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Aggiungi a Slack",
   "document published": "documento pubblicato",
   "document updated": "documento aggiornato",
