--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
   "Link copied": "Link gekopieerd",
+  "Download revision": "Download revision",
   "Dark": "Donker",
   "Light": "Licht",
   "System": "Systeem",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} gepubliceerd",
   "{{userName}} unpublished": "{{userName}} gedepubliceerd",
   "{{userName}} moved": "{{userName}} verplaatst",
-  "Export started": "Exporteren is begonnen",
   "Your file will be available in {{ location }} soon": "Je bestand is binnenkort beschikbaar op {{ location }}",
   "View": "Bekijk",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exporteren is begonnen",
   "A ZIP file containing the images, and documents in the Markdown format.": "Een Zip-bestand met de afbeeldingen en documenten als Markdown bestanden.",
   "A ZIP file containing the images, and documents as HTML files.": "Een Zip-bestand met de afbeeldingen en documenten als HTML-bestanden.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Gestructureerde gegevens die kunnen worden gebruikt om gegevens te migreren naar een andere compatibele {{ appName }} installatie.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}u gelezen",
   "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
+  "{{count}} people": "{{count}} persoon",
+  "{{count}} people_plural": "{{count}} personen",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
   "Revision options": "Revisie opties",
@@ -474,7 +478,7 @@
   "Change permissions?": "Machtigingen wijzigen?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kan niet verplaatst worden binnen {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Je kunt documenten in een alfabetisch gesorteerde collectie niet opnieuw ordenen",
-  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} kan niet hier naartoe worden verplaatst",
   "Return to App": "Terug naar de app",
   "Installation": "Installatie",
   "Unstar document": "Document verwijderen uit favorieten",
@@ -617,7 +621,7 @@
   "Account": "Account",
   "API & Apps": "API & apps",
   "Details": "Details",
-  "Authentication": "Authentication",
+  "Authentication": "Authenticatie",
   "Security": "Beveiliging",
   "Features": "Features",
   "Members": "Deelnemers",
@@ -709,6 +713,12 @@
   "Add a description": "Beschrijving toevoegen",
   "Signing in": "Inloggen",
   "You can safely close this window once the Outline desktop app has opened": "Je kunt dit venster veilig sluiten zodra de Outline desktop app is geopend",
+  "{{ current }} of {{ count }} changes": "{{ current }} van {{ count }} wijzigingen",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} van {{ count }} wijzigingen",
+  "{{ count }} changes": "{{ count }} wijziging",
+  "{{ count }} changes_plural": "{{ count }} wijzigingen",
+  "Previous change": "Vorige wijziging",
+  "Next change": "Volgende wijziging",
   "Error creating comment": "Fout bij maken reactie",
   "Add a comment": "Voeg een opmerking toe",
   "Add a reply": "Reactie toevoegen",
@@ -756,6 +766,7 @@
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
   "Restore version": "Versie herstellen",
+  "Highlight changes": "Wijzigingen markeren",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
   "Created": "Aangemaakt",
@@ -886,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Gebruikers en meer vermelden",
   "Insert block": "Voeg blok in",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Aanmelden",
   "Continue with Email": "Verdergaan met e-mailadres",
   "Continue with {{ authProviderName }}": "Ga verder met {{ authProviderName }}",
@@ -1006,19 +1018,22 @@
   "Where users are redirected to authorize this app": "Waar gebruikers worden omgeleid om deze app te autoriseren",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Met applicaties kunt je interne of openbare integraties bouwen met Outline en veilige toegang via OAuth bieden. Zie de <em>documentatie</em> voor meer details.",
   "Settings saved": "Instellingen opgeslagen",
-  "Are you sure?": "Are you sure?",
-  "Removing": "Removing",
-  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
-  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Are you sure?": "Weet je het zeker?",
+  "Removing": "Verwijderen",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Het verwijderen van deze verificatieprovider voorkomt dat leden zich met {{ authProvider }} kunnen aanmelden.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Beheer hoe leden die zich aanmelden voor jouw werkruimte en welke verificatieproviders ingeschakeld zijn.",
   "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
-  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connect {{ authProvider }} to allow members to sign-in": "Verbinden met {{ authProvider }} om leden toe te staan in te loggen",
   "Connected": "Verbonden",
   "Disabled": "Uitgeschakeld",
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
   "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
-  "Restrictions": "Restrictions",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
+  "Restrictions": "Beperkingen",
   "by {{ name }}": "door {{ name }}",
+  "Expired": "Verlopen",
   "Last used": "Laatst gebruikt",
   "No expiry": "Geen vervaldatum",
   "Restricted scope": "Beperkt bereik",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Leden exporteren is mislukt",
   "Download CSV": "CSV downloaden",
   "Processing": "Verwerken",
-  "Expired": "Verlopen",
   "Completed": "Voltooid",
   "Failed": "Mislukt",
   "All collections": "Alle collecties",
@@ -1083,7 +1097,6 @@
   "Date created": "Aanmaakdatum",
   "Crop Image": "Afbeelding bijsnijden",
   "Crop image": "Afbeelding bijsnijden",
-  "How does this work?": "Hoe werkt dit?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Je kunt een zipbestand importeren dat eerder is geëxporteerd vanuit de JSON-optie in een andere instantie. In {{ appName }}, open <em>Exporteren</em> in de zijbalk in Voorkeuren en klik op <em>Exporteer gegevens</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Sleep het zip-bestand vanuit de JSON exportoptie in {{appName}}, of klik om te uploaden",
   "Canceled": "Geannuleerd",
@@ -1220,13 +1233,14 @@
   "Are you sure you want to require invites?": "Weet je zeker dat je deze uitnodiging wilt verwijderen?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nieuwe gebruikers moeten eerst worden uitgenodigd om een account aan te maken. <em>Standaard rol</em> en <em>Toegestane domeinen</em> zullen niet langer van toepassing zijn.",
   "Settings that impact the access, security, and content of your workspace.": "Instellingen die van invloed zijn op de toegang, beveiliging en inhoud van je werkruimte.",
-  "Invites": "Invites",
+  "Invites": "Uitnodigingen",
   "Allow users to send invites": "Gebruikers toestaan uitnodigingen te sturen",
   "Allow editors to invite other people to the workspace": "Redacteurs toestaan om andere personen uit te nodigen voor de werkruimte",
   "Require invites": "Uitnodigingen vereisen",
   "Require members to be invited to the workspace before they can create an account using SSO.": "Vereist dat leden uitgenodigd worden voor de werkruimte voordat ze een account kunnen aanmaken met behulp van SSO.",
   "Default role": "Standaard rol",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "De standaard gebruikersrol voor nieuwe accounts. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Wanneer ingeschakeld, kunnen documenten publiekelijk worden gedeeld op het internet door elk lid van de werkruimte",
   "Viewer document exports": "Bekijkers kunnen documenten exporteren",
   "When enabled, viewers can see download options for documents": "Wanneer ingeschakeld, kunnen kijkers downloadopties voor documenten zien",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Een ID dat de website uniek identificeert in jouw Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Oeps, je moet de machtigingen in Notion accepteren om {{ appName }} te verbinden met jouw werkruimte. Opnieuw proberen?",
   "Import pages from Notion": "Pagina's importeren uit Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Voeg toe aan Slack",
   "document published": "document gepubliceerd",
   "document updated": "document bijgewerkt",
