--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nowa aplikacja",
   "This version of the document was deleted": "Ta wersja dokumentu została usunięta",
   "Link copied": "Link skopiowany",
+  "Download revision": "Download revision",
   "Dark": "Ciemny",
   "Light": "Jasny",
   "System": "System",
@@ -293,9 +294,10 @@
   "{{userName}} published": "Użytkownik {{userName}} opublikował",
   "{{userName}} unpublished": "{{userName}} nieopublikowane",
   "{{userName}} moved": "Użytkownik {{userName}} przeniósł",
-  "Export started": "Eksport rozpoczęty",
   "Your file will be available in {{ location }} soon": "Twój plik będzie dostępny wkrótce w {{ location }}",
   "View": "Wyświetl",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Eksport rozpoczęty",
   "A ZIP file containing the images, and documents in the Markdown format.": "Plik ZIP zawierający obrazy i dokumenty w formacie Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Plik ZIP zawierający obrazy i dokumenty w postaci plików HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Uporządkowane dane, które mogą być użyte do przeniesienia danych do innej kompatybilnej instancji {{ appName }}.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} minut czytania",
   "Revision deleted": "Usunięto poprawkę",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktualna wersja",
   "{{userName}} edited": "Użytkownik {{userName}} edytował",
   "Revision options": "Opcje rewizji",
@@ -709,6 +713,12 @@
   "Add a description": "Dodaj opis",
   "Signing in": "Logowanie...",
   "You can safely close this window once the Outline desktop app has opened": "Możesz bezpiecznie zamknąć to okno po otwarciu aplikacji komputerowej Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Wystąpił błąd podczas tworzenia komentarza",
   "Add a comment": "Dodaj komentarz",
   "Add a reply": "Dodaj odpowiedź",
@@ -756,6 +766,7 @@
   "Archived": "Zarchiwizowano",
   "Save draft": "Zapisz wersję roboczą",
   "Restore version": "Przywróć wersję",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Nie ma jeszcze historii",
   "Source": "Źródło",
   "Created": "Utworzono",
@@ -886,6 +897,7 @@
   "Triggers": "Wyzwalacze",
   "Mention users and more": "Wzmianki o użytkownikach i nie tylko",
   "Insert block": "Wstaw blok",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Zaloguj się",
   "Continue with Email": "Kontynuuj przy użyciu e-maila",
   "Continue with {{ authProviderName }}": "Kontynuuj za pomocą {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Połącz",
   "Allow members to sign-in using their email address": "Zezwalaj członkom na logowanie się za pomocą swojego adresu e-mail",
   "The server must have SMTP configured to enable this setting": "Serwer musi mieć skonfigurowane SMTP, aby włączyć to ustawienie",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "przez {{ name }}",
+  "Expired": "Ważność wygasła",
   "Last used": "Ostatnio używane",
   "No expiry": "Brak terminu ważności",
   "Restricted scope": "Ograniczony zakres",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Przetwarzanie",
-  "Expired": "Ważność wygasła",
   "Completed": "Ukończone",
   "Failed": "Niepowodzenie",
   "All collections": "Wszystkie kolekcje",
@@ -1083,7 +1097,6 @@
   "Date created": "Data utworzenia",
   "Crop Image": "Przytnij obraz",
   "Crop image": "Przytnij obraz",
-  "How does this work?": "Jak to działa?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Możesz zaimportować plik zip, który został wcześniej wyeksportowany z opcji JSON w innej instancji. W {{ appName }} otwórz <em>Eksport</em> w pasku bocznym Ustawień i kliknij <em>Eksportuj dane</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Przeciągnij i upuść plik zip z opcji eksportu JSON w {{appName}} lub kliknij, aby wybrać plik do przesłania",
   "Canceled": "Anulowano",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Wymaga, aby członkowie zostali zaproszeni do obszaru roboczego, zanim będą mogli utworzyć konto za pomocą SSO.",
   "Default role": "Domyślna rola",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Domyślna rola użytkownika dla nowych kont. Zmiana tego ustawienia nie ma wpływu na istniejące konta użytkowników.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Po włączeniu dokumenty mogą być udostępniane publicznie w Internecie przez dowolnego członka obszaru roboczego",
   "Viewer document exports": "Widz może eksportować dokumenty",
   "When enabled, viewers can see download options for documents": "Po włączeniu członkowie z uprawnieniami widza mogą zobaczyć opcje pobierania dokumentów",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Identyfikator, który jednoznacznie identyfikuje witrynę w Twojej instancji Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Ups, musisz zaakceptować uprawnienia w Notion, aby połączyć {{ appName }} ze swoim obszarem roboczym. Spróbować ponownie?",
   "Import pages from Notion": "Importowanie stron z aplikacji Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Dodaj do Slacka",
   "document published": "dokument opublikowany",
   "document updated": "dokument zaktualizowany",
