--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "新表情",
+  "Upload emoji": "上传表情",
   "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
@@ -138,12 +138,13 @@
   "Log out": "退出登录",
   "Mark notifications as read": "将通知标记为已读",
   "Archive all notifications": "将所有通知存档",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "标记为已读",
+  "Mark as unread": "标记为未读",
   "New App": "新建应用",
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
   "Link copied": "链接已复制",
+  "Download revision": "下载版本",
   "Dark": "深色模式",
   "Light": "浅色模式",
   "System": "跟随系统",
@@ -258,20 +259,20 @@
   "Currently editing": "正在编辑",
   "Currently viewing": "正在浏览",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 浏览",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "不支持的文件类型，请使用PNG、JPG、GIF或WebP。",
+  "File size too large. Maximum size is {{ size }}.": "上传文件过大. 文件大小限制为{{ size }}。",
+  "Please enter a name for the emoji": "请输入表情名称",
+  "Please select an image file": "请选择一个图像文件",
+  "Emoji created successfully": "表情创建成功",
   "Uploading": "上传中",
-  "Add emoji": "Add emoji",
+  "Add emoji": "添加表情符号",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "Upload an image": "上传图片",
+  "Click or drag to replace": "单击或拖动以替换",
+  "Drop the image here": "将图像拖放到这里",
+  "Click, drop, or paste an image here": "点击、拖动或粘贴图片到这里",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "Choose a name": "Choose a name",
+  "Choose a name": "选择一个名字",
   "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模块加载失败",
@@ -293,9 +294,10 @@
   "{{userName}} published": "已被 {{userName}} 发布",
   "{{userName}} unpublished": "{{userName}} 未发布",
   "{{userName}} moved": "已被 {{userName}} 移动",
-  "Export started": "导出已开始",
   "Your file will be available in {{ location }} soon": "您的文件将很快在 {{ location }} 中可用",
   "View": "浏览",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "导出已开始",
   "A ZIP file containing the images, and documents in the Markdown format.": "包含图片和 Markdown 格式文档的 ZIP 文件。",
   "A ZIP file containing the images, and documents as HTML files.": "包含图片和 HTML 格式文档的 ZIP 文件。",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "结构化数据可以用于传输数据到另一个兼容的 {{ appName }} 实例。",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "阅读了{{ minutes }}分钟",
   "Revision deleted": "修订已被删除",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "当前版本",
   "{{userName}} edited": "{{userName}} 已编辑",
   "Revision options": "修订选项",
@@ -709,6 +713,12 @@
   "Add a description": "添加描述",
   "Signing in": "登录中",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面应用程序打开后，你可以安全地关闭此窗口",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "创建评论时出错",
   "Add a comment": "添加评论",
   "Add a reply": "增加回复",
@@ -756,6 +766,7 @@
   "Archived": "已归档",
   "Save draft": "保存草稿",
   "Restore version": "恢复此版本",
+  "Highlight changes": "Highlight changes",
   "No history yet": "暂无历史记录",
   "Source": "源",
   "Created": "创建日期",
@@ -886,6 +897,7 @@
   "Triggers": "触发器",
   "Mention users and more": "提及用户等",
   "Insert block": "插入块",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "登录",
   "Continue with Email": "使用电子邮箱继续",
   "Continue with {{ authProviderName }}": "使用 {{ authProviderName }} 继续",
@@ -1017,8 +1029,11 @@
   "Connect": "连接",
   "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件登录",
   "The server must have SMTP configured to enable this setting": "服务器必须配置 SMTP 以启用此设置",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "由 {{ name }}创建",
+  "Expired": "已过期",
   "Last used": "最后使用的",
   "No expiry": "没有到期",
   "Restricted scope": "受限作用域",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "处理中",
-  "Expired": "已过期",
   "Completed": "已完成",
   "Failed": "失败",
   "All collections": "所有文档集",
@@ -1083,7 +1097,6 @@
   "Date created": "创建日期",
   "Crop Image": "Crop Image",
   "Crop image": "裁剪图像",
-  "How does this work?": "这是如何工作的？",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "您可以导入之前从另一个实例中的JSON选项导出的zip文件。在 {{ appName }} 的侧边栏设置中打开 <em>导出</em> ，并点击 <em>导出数据</em>。",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "拖放或单击上传从 {{appName}} 的 JSON 导出选项导出的 zip 文件",
   "Canceled": "已取消",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "成员需要先被邀请进入工作区，才能通过SSO创建账户。",
   "Default role": "默认权限",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "新帐户的默认用户角色。更改此设置不会影响现有用户帐户。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "启用后，工作区的任何成员都可以在互联网上公开共享文档",
   "Viewer document exports": "浏览者文档导出",
   "When enabled, viewers can see download options for documents": "启用时，浏览者可以看到文档的下载选项",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "此为唯一标识符，用以在您部署的 Matomo 实例中区分不同网站。",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "糟糕，您需要在 Notion 中完成授权才能将 {{ appName }} 连接到您的工作区。再试一次？",
   "Import pages from Notion": "从 Notion 导入页面",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "添加到 Slack",
   "document published": "文档已发布",
   "document updated": "文档已更新",
