--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nová žádost",
   "This version of the document was deleted": "Tato verze dokumentu byla smazána",
   "Link copied": "Odkaz zkopírován",
+  "Download revision": "Download revision",
   "Dark": "Temný",
   "Light": "Světlý",
   "System": "Systém",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} zveřejnil",
   "{{userName}} unpublished": "{{userName}} zrušil publikování",
   "{{userName}} moved": "{{userName}} přesunul",
-  "Export started": "Export byl zahájen",
   "Your file will be available in {{ location }} soon": "Váš soubor bude brzy k dispozici v {{ location }}",
   "View": "Zobrazit",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Export byl zahájen",
   "A ZIP file containing the images, and documents in the Markdown format.": "Soubor ZIP obsahující obrázky a dokumenty ve formátu Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Soubor ZIP obsahující obrázky a dokumenty ve formátu HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturovaná data, která lze použít k přenosu dat do kompatibilní aplikace {{ appName }}.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktuální verze",
   "{{userName}} edited": "{{userName}} akutalizoval",
   "Revision options": "Možnosti revize",
@@ -709,6 +713,12 @@
   "Add a description": "Přidat popis",
   "Signing in": "Přihlašování",
   "You can safely close this window once the Outline desktop app has opened": "Po otevření desktopové aplikace Outline můžete toto okno bezpečně zavřít",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Chyba při vytváření komentáře",
   "Add a comment": "Přidat komentář",
   "Add a reply": "Přidat odpověď",
@@ -756,6 +766,7 @@
   "Archived": "Archivované",
   "Save draft": "Uložit koncept",
   "Restore version": "Obnovit verzi",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Zatím žádná historie",
   "Source": "Zdroj",
   "Created": "Vytvořeno",
@@ -886,6 +897,7 @@
   "Triggers": "Akce",
   "Mention users and more": "Zmínit uživatele a další",
   "Insert block": "Přidat blok",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Přihlásit se",
   "Continue with Email": "Pokračovat pomocí e-mailu",
   "Continue with {{ authProviderName }}": "Pokračovat s {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Připojit",
   "Allow members to sign-in using their email address": "Povolit členům přihlášení pomocí jejich e-mailové adresy",
   "The server must have SMTP configured to enable this setting": "Aby bylo možné toto nastavení povolit, musí mít server nakonfigurován SMTP",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Vypršel",
   "Last used": "Naposledy použito",
   "No expiry": "Bez vypršení platnosti",
   "Restricted scope": "Restricted scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Zpracovává se",
-  "Expired": "Vypršel",
   "Completed": "Dokončeno",
   "Failed": "Chyba",
   "All collections": "Všechny sbírky",
@@ -1083,7 +1097,6 @@
   "Date created": "Datum vytvoření",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
-  "How does this work?": "Jak to funguje?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Můžete importovat soubor zip, který byl dříve exportován z možnosti JSON v jiné instanci. V {{ appName }} otevřete <em>Export</em> v postranním panelu Nastavení a klikněte na <em>Exportovat data</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Přetáhněte soubor zip z možnosti exportu JSON v {{appName}} nebo kliknutím nahrajte",
   "Canceled": "Zrušeno",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Vyžadovat, aby členové byli pozváni do pracovního prostoru, než si vytvoří účet pomocí jednotného přihlášení.",
   "Default role": "Výchozí role uživatele",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Výchozí uživatelská role pro nové účty. Změna tohoto nastavení nemá vliv na stávající uživatelské účty.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Je-li povoleno, dokumenty mohou být veřejně sdíleny na internetu kterýmkoli členem pracovního prostoru",
   "Viewer document exports": "Exportování dokumentů",
   "When enabled, viewers can see download options for documents": "Když je tato možnost povolena, prohlížející uvidí možnosti stahování dokumentů",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Přidat do Slacku",
   "document published": "dokument zveřejněn",
   "document updated": "dokument aktualizován",
