--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Nouvelle application",
   "This version of the document was deleted": "Cette version du document a été supprimée",
   "Link copied": "Lien copié",
+  "Download revision": "Download revision",
   "Dark": "Sombre",
   "Light": "Clair",
   "System": "Système",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} a publié",
   "{{userName}} unpublished": "{{userName}} a annulé la publication",
   "{{userName}} moved": "{{userName}} a déplacé",
-  "Export started": "Export démarré",
   "Your file will be available in {{ location }} soon": "Votre fichier sera bientôt disponible sur {{ location }}",
   "View": "Afficher",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Export démarré",
   "A ZIP file containing the images, and documents in the Markdown format.": "Un fichier ZIP contenant les images et les documents au format Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Un fichier ZIP contenant les images et les documents sous forme de fichiers HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Les données structurées peuvent être utilisées pour transmettre des données vers une autre instance {{ appName }} compatible.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h de lecture",
   "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Revision deleted": "Révision supprimée",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Version actuelle",
   "{{userName}} edited": "{{userName}} a modifié",
   "Revision options": "Options de version",
@@ -709,6 +713,12 @@
   "Add a description": "Ajouter une description",
   "Signing in": "Connexion en cours",
   "You can safely close this window once the Outline desktop app has opened": "Vous pouvez fermer cette fenêtre en toute sécurité après que l'application bureau Outline s'est ouverte",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Erreur lors de la création du commentaire",
   "Add a comment": "Ajouter un commentaire",
   "Add a reply": "Ajouter une réponse",
@@ -756,6 +766,7 @@
   "Archived": "Archivé",
   "Save draft": "Enregistrer le brouillon",
   "Restore version": "Restaurer cette version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Pas encore d'historique",
   "Source": "Source",
   "Created": "Créé",
@@ -886,6 +897,7 @@
   "Triggers": "Alertes",
   "Mention users and more": "Mentionner les utilisateurs et plus",
   "Insert block": "Insérer un bloc",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Se connecter",
   "Continue with Email": "Continuer avec un e-mail",
   "Continue with {{ authProviderName }}": "Continuer avec {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Se connecter",
   "Allow members to sign-in using their email address": "Autoriser les membres à se connecter en utilisant leur adresse e-mail",
   "The server must have SMTP configured to enable this setting": "Le serveur doit avoir SMTP configuré pour activer ce paramètre",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "par {{ name }}",
+  "Expired": "Expiré",
   "Last used": "Dernier utilisé",
   "No expiry": "Pas d'expiration",
   "Restricted scope": "Portée restreinte",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Traitement en cours",
-  "Expired": "Expiré",
   "Completed": "Terminé",
   "Failed": "Échoué",
   "All collections": "Toutes les collections",
@@ -1083,7 +1097,6 @@
   "Date created": "Créé le",
   "Crop Image": "Rogner l'image",
   "Crop image": "Rogner l’image",
-  "How does this work?": "Comment cela fonctionne-t-il ?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Vous pouvez importer un fichier zip provenant de l'export JSON d'une autre installation Outline. Dans {{ appName }}, ouvrez <em>Exporter</em> dans les paramètres et cliquez sur <em>Exporter les données</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Glissez et déposez le fichier zip provenant d'un export JSON de {{appName}}, ou cliquez pour le téléverser",
   "Canceled": "Annulée",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Exiger que les membres soient invités dans l'espace de travail avant de pouvoir créer un compte en utilisant SSO.",
   "Default role": "Rôle par défaut",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Rôle utilisateur donné par défaut aux nouveaux comptes. La modification de ce paramètre n'affecte pas les comptes existants.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Lorsque cette option est activée, les documents peuvent être partagés publiquement sur Internet par n'importe quel membre de l'espace de travail",
   "Viewer document exports": "Export de documents pour les lecteurs",
   "When enabled, viewers can see download options for documents": "Lorsque cette option est activée, les utilisateurs peuvent voir les options de téléchargement des documents",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Un ID qui identifie de manière unique le site web dans votre instance Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "\"Oups, vous devez accepter les autorisations dans Notion pour connecter {{ appName }} à votre espace de travail. Essayez à nouveau ?\"",
   "Import pages from Notion": "Importer des pages depuis une notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Ajouter à Slack",
   "document published": "document publié",
   "document updated": "document mis à jour",
