--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Tautan disalin",
+  "Download revision": "Download revision",
   "Dark": "Gelap",
   "Light": "Cerah",
   "System": "Sistem",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} menerbitkan",
   "{{userName}} unpublished": "{{userName}} tidak menerbitkan",
   "{{userName}} moved": "{{userName}} memindahkan",
-  "Export started": "Ekspor dimulai",
   "Your file will be available in {{ location }} soon": "Your file will be available in {{ location }} soon",
   "View": "View",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Ekspor dimulai",
   "A ZIP file containing the images, and documents in the Markdown format.": "Berkas ZIP yang berisi gambar, dan dokumen dalam format Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Berkas ZIP yang berisi gambar, dan dokumen sebagai berkas HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Data terstruktur yang dapat digunakan untuk memindahkan data ke server {{ appName }} lain yang kompatibel.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} menyunting",
   "Revision options": "Opsi revisi",
@@ -709,6 +713,12 @@
   "Add a description": "Tambahkan keterangan",
   "Signing in": "Sedang masuk",
   "You can safely close this window once the Outline desktop app has opened": "Anda dapat menutup jendela ini dengan aman setelah aplikasi desktop Outline dibuka",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Terjadi kesalahan saat membuat komentar",
   "Add a comment": "Tambahkan komentar",
   "Add a reply": "Tambahkan balasan",
@@ -756,6 +766,7 @@
   "Archived": "Diarsipkan",
   "Save draft": "Save draft",
   "Restore version": "Pulihkan versi",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Belum ada riwayat",
   "Source": "Source",
   "Created": "Dibuat",
@@ -886,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Insert block": "Insert block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Masuk",
   "Continue with Email": "Lanjutkan dengan Surel",
   "Continue with {{ authProviderName }}": "Lanjutkan dengan {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Hubungkan",
   "Allow members to sign-in using their email address": "Izinkan anggota untuk masuk menggunakan alamat email mereka",
   "The server must have SMTP configured to enable this setting": "Server harus memiliki konfigurasi SMTP untuk mengaktifkan setelan ini",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Kedaluwarsa",
   "Last used": "Last used",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Memproses",
-  "Expired": "Kedaluwarsa",
   "Completed": "Selesai",
   "Failed": "Gagal",
   "All collections": "Semua koleksi",
@@ -1083,7 +1097,6 @@
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
-  "How does this work?": "Bagaimana cara kerjanya?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Anda dapat mengimpor file zip yang sebelumnya diekspor dari opsi JSON di contoh lain. Di {{ appName }}, buka <em>Ekspor</em> di sidebar Pengaturan dan klik <em>Ekspor Data</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Drag and drop file zip dari opsi ekspor JSON di {{appName}}, atau klik untuk mengunggah",
   "Canceled": "Canceled",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Wajibkan anggota untuk diundang ke workspace sebelum mereka dapat membuat akun menggunakan SSO.",
   "Default role": "Peran default",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Peran pengguna default untuk akun baru. Mengubah setelan ini tidak memengaruhi akun pengguna yang ada.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Saat diaktifkan, dokumen dapat dibagikan secara publik di internet oleh anggota workspace mana pun",
   "Viewer document exports": "Ekspor dokumen oleh viewer",
   "When enabled, viewers can see download options for documents": "Saat diaktifkan, viewer dapat melihat opsi unduhan untuk dokumen",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Tambahkan ke Slack",
   "document published": "dokumen diterbitkan",
   "document updated": "dokumen diperbarui",
