--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "リンクをコピーしました",
+  "Download revision": "Download revision",
   "Dark": "ダークモード",
   "Light": "ライトモード",
   "System": "システム",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} が公開しました",
   "{{userName}} unpublished": "{{userName}} が非公開にしました",
   "{{userName}} moved": "{{userName}} が移動しました",
-  "Export started": "エクスポートを開始しました",
   "Your file will be available in {{ location }} soon": "あなたのファイルは間もなく {{ location }} で利用できます",
   "View": "表示",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "エクスポートを開始しました",
   "A ZIP file containing the images, and documents in the Markdown format.": "画像、および Markdown 形式のドキュメントを含む ZIP ファイル",
   "A ZIP file containing the images, and documents as HTML files.": "画像、および HTML 形式のドキュメントを含む ZIP ファイル",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "他の {{ appName }} インスタンスにデータをインポートするために使用できるデータ。",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} ",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "現在のバージョン",
   "{{userName}} edited": "{{userName}} が編集しました",
   "Revision options": "改訂オプション",
@@ -709,6 +713,12 @@
   "Add a description": "説明文を追加",
   "Signing in": "ログイン中",
   "You can safely close this window once the Outline desktop app has opened": "Outline デスクトップ アプリが開いたら、このウィンドウを安全に閉じることができます",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "コメントの作成中にエラーが発生しました",
   "Add a comment": "コメントを追加",
   "Add a reply": "返信を追加",
@@ -756,6 +766,7 @@
   "Archived": "アーカイブ",
   "Save draft": "下書きを保存",
   "Restore version": "復元",
+  "Highlight changes": "Highlight changes",
   "No history yet": "履歴はありません",
   "Source": "ソース",
   "Created": "作成日時",
@@ -886,6 +897,7 @@
   "Triggers": "トリガー",
   "Mention users and more": "ユーザーなどをメンションする",
   "Insert block": "ブロックの挿入",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "ログイン",
   "Continue with Email": "Eメール でログイン",
   "Continue with {{ authProviderName }}": "{{ authProviderName }} でログイン",
@@ -1017,8 +1029,11 @@
   "Connect": "接続",
   "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
   "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }}",
+  "Expired": "期限切れ",
   "Last used": "最終使用日",
   "No expiry": "無期限",
   "Restricted scope": "制限付きスコープ",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "処理中",
-  "Expired": "期限切れ",
   "Completed": "完了",
   "Failed": "失敗",
   "All collections": "全てのコレクション",
@@ -1083,7 +1097,6 @@
   "Date created": "作成日時",
   "Crop Image": "Crop Image",
   "Crop image": "画像を切り取る",
-  "How does this work?": "これはどのように機能しますか?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "以前にエクスポートした zip ファイルをインポートできます。 {{ appName }} で、サイドバーの <em>エクスポート画面</em> を開き、 <em>データのエクスポート</em> をクリックします。",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "{{appName}} の JSON エクスポートオプションから zip ファイルをドラッグ&ドロップするか、クリックしてアップロードします",
   "Canceled": "キャンセルしました",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "メンバーは SSO を使用してアカウントを作成する前に、ワークスペースに招待される必要があります。",
   "Default role": "デフォルトのロール",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "新規アカウントのデフォルトのユーザーロールです。この設定を変更しても、既存のユーザーアカウントには影響しません。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "この設定を有効にすると、チームメンバーなら誰でもインターネット上でドキュメントを公開することができます。",
   "Viewer document exports": "閲覧者によるドキュメントのエクスポート",
   "When enabled, viewers can see download options for documents": "有効にすると、閲覧者はドキュメントのダウンロードオプションを表示できます",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Matomo インスタンスでウェブサイトを一意に識別する ID",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "{{ appName }} をワークスペースに接続するには、Notionで権限を許可する必要があります。もう一度試しますか？",
   "Import pages from Notion": "Notion からページをインポートする",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Slack に追加",
   "document published": "ドキュメントを公開",
   "document updated": "ドキュメントが更新されました",
