--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "새 애플리케이션",
   "This version of the document was deleted": "이 문서의 버전은 삭제됨",
   "Link copied": "링크 복사됨",
+  "Download revision": "Download revision",
   "Dark": "어둡게 보기",
   "Light": "밝게 보기",
   "System": "시스템",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} 이(가) 게시함",
   "{{userName}} unpublished": "{{userName}} 이(가) 게시 취소",
   "{{userName}} moved": "{{userName}} 이(가) 이동함",
-  "Export started": "내보내기 시작됨",
   "Your file will be available in {{ location }} soon": "잠시 후 {{ location }} 에서 파일 사용 가능",
   "View": "보기",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "내보내기 시작됨",
   "A ZIP file containing the images, and documents in the Markdown format.": "마크다운 형식의 이미지 및 문서가 포함된 ZIP 파일.",
   "A ZIP file containing the images, and documents as HTML files.": "HTML 형식의 이미지 및 문서가 포함된 ZIP 파일.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "호환되는 다른 {{ appName }} 인스턴스로 데이터를 전송하는 데 사용할 수 있는 구조화된 데이터입니다.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}분 전에 읽음",
   "Revision deleted": "수정본 삭제됨",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "현재 버전",
   "{{userName}} edited": "{{userName}} 이(가) 수정함",
   "Revision options": "수정 옵션",
@@ -709,6 +713,12 @@
   "Add a description": "설명 추가",
   "Signing in": "로그인 중",
   "You can safely close this window once the Outline desktop app has opened": "Outline desktop 앱이 열리면 이 창을 안전하게 닫을 수 있습니다.",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "댓글을 만드는 중에 오류가 발생했습니다.",
   "Add a comment": "댓글 달기",
   "Add a reply": "답글 달기",
@@ -756,6 +766,7 @@
   "Archived": "보관됨",
   "Save draft": "임시 저장",
   "Restore version": "버전 복원",
+  "Highlight changes": "Highlight changes",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
   "Created": "생성됨",
@@ -886,6 +897,7 @@
   "Triggers": "트리거",
   "Mention users and more": "사용자 멘션 및 기타",
   "Insert block": "블록 삽입",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "로그인",
   "Continue with Email": "이메일로 계속하기",
   "Continue with {{ authProviderName }}": "{{ authProviderName }} 사용하여 계속하기",
@@ -1017,8 +1029,11 @@
   "Connect": "연결",
   "Allow members to sign-in using their email address": "멤버가 이메일 주소를 사용하여 로그인하도록 허용",
   "The server must have SMTP configured to enable this setting": "이 설정을 사용하려면 서버에 SMTP가 구성되어 있어야 합니다.",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }} 에 의해",
+  "Expired": "만료",
   "Last used": "최근 사용됨",
   "No expiry": "만료 없음",
   "Restricted scope": "제한된 범위",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "처리중",
-  "Expired": "만료",
   "Completed": "완료",
   "Failed": "실패",
   "All collections": "모든 컬렉션",
@@ -1083,7 +1097,6 @@
   "Date created": "생성 일자",
   "Crop Image": "Crop Image",
   "Crop image": "이미지 자르기",
-  "How does this work?": "어떻게 동작합니까?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "다른 인스턴스의 JSON 옵션에서 이전에 내보낸 압축 파일을 가져올 수 있습니다. {{ appName }} 에서 설정 사이드바에서 <em>내보내기</em>를 열고 <em>데이터 내보내기</em>클릭합니다.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "{{appName}}의 JSON 내보내기 옵션에서 zip 파일을 드래그 앤 드롭하거나 클릭하여 업로드",
   "Canceled": "취소됨",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "멤버가 SSO를 사용하여 계정을 만들려면 워크스페이스에 초대해야 합니다.",
   "Default role": "기본 역할",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "새 계정의 기본 사용자 역할입니다. 이 설정을 변경해도 기존 사용자 계정에는 영향을 미치지 않습니다.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "활성화되면 워크스페이스에 모든 멤버가 문서를 인터넷에 공유 할 수 있습니다",
   "Viewer document exports": "뷰어 문서 내보내기",
   "When enabled, viewers can see download options for documents": "사용하도록 설정하면 보는 사람이 문서의 다운로드 옵션을 볼 수 있습니다.",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Matomo 인스턴스에서 웹사이트를 고유하게 식별하는 ID입니다.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "죄송합니다. {{ appName }} 을 워크스페이스에 연결하려면 Notion에서 권한을 수락해야 합니다. 다시 시도하시겠습니까?",
   "Import pages from Notion": "Notion에서 내보낸 페이지 가져오기",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Slack에 추가",
   "document published": "문서 게시됨",
   "document updated": "문서 업데이트됨",
