--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ny applikasjon",
   "This version of the document was deleted": "Denne versjonen av dokumentet har blitt slettet",
   "Link copied": "Lenke kopiert",
+  "Download revision": "Download revision",
   "Dark": "Mørk",
   "Light": "Lys",
   "System": "System",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} publiserte",
   "{{userName}} unpublished": "{{userName}} avpubliserte",
   "{{userName}} moved": "{{userName}} flyttet",
-  "Export started": "Eksport startet",
   "Your file will be available in {{ location }} soon": "Filen din vil snart være tilgjengelig i {{ location }}",
   "View": "Vis",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Eksport startet",
   "A ZIP file containing the images, and documents in the Markdown format.": "En ZIP-fil som inneholder bildene og dokumentene i Markdown-formatet.",
   "A ZIP file containing the images, and documents as HTML files.": "En ZIP-fil som inneholder bildene og dokumentene som HTML-filer.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturerte data som kan brukes til å overføre data til en annen kompatibel {{ appName }}-instans.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} min. lesetid",
   "Revision deleted": "Revisjon slettet",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Nåværende versjon",
   "{{userName}} edited": "{{userName}} redigerte",
   "Revision options": "Revisjonsalternativer",
@@ -709,6 +713,12 @@
   "Add a description": "Legg til en beskrivelse",
   "Signing in": "Logger inn",
   "You can safely close this window once the Outline desktop app has opened": "Du kan trygt lukke dette vinduet når Outline-skrivebordsappen har åpnet",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Feil ved oppretting av kommentar",
   "Add a comment": "Legg til en kommentar",
   "Add a reply": "Legg til et svar",
@@ -756,6 +766,7 @@
   "Archived": "Arkivert",
   "Save draft": "Lagre utkast",
   "Restore version": "Gjenopprett versjon",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ingen historikk ennå",
   "Source": "Kilde",
   "Created": "Opprettet",
@@ -886,6 +897,7 @@
   "Triggers": "Utløsere",
   "Mention users and more": "Nevn brukere og mer",
   "Insert block": "Sett inn blokk",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Logg inn",
   "Continue with Email": "Fortsett med e-post",
   "Continue with {{ authProviderName }}": "Fortsett med {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Koble til",
   "Allow members to sign-in using their email address": "Tillat medlemmer å logge inn med sin e-postadresse",
   "The server must have SMTP configured to enable this setting": "Serveren må ha SMTP konfigurert for å aktivere denne innstillingen",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
+  "Expired": "Utløpt",
   "Last used": "Sist brukt",
   "No expiry": "Ingen utløpsdato",
   "Restricted scope": "Begrenset scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Behandler",
-  "Expired": "Utløpt",
   "Completed": "Fullført",
   "Failed": "Mislyktes",
   "All collections": "Alle samlinger",
@@ -1083,7 +1097,6 @@
   "Date created": "Dato opprettet",
   "Crop Image": "Crop Image",
   "Crop image": "Beskjær bilde",
-  "How does this work?": "Hvordan fungerer dette?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importere en zip-fil som tidligere ble eksportert fra JSON-alternativet i en annen instans. I {{ appName }}, åpne <em>Eksport</em> i innstillingssidestolpen og klikk på <em>Eksporter Data</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Dra og slipp zip-filen fra JSON-eksportalternativet i {{appName}}, eller klikk for å laste opp",
   "Canceled": "Avbrutt",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Krev at medlemmer blir invitert til arbeidsområdet før de kan opprette en konto ved bruk av SSO.",
   "Default role": "Standardrolle",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Standardbrukerrollen for nye kontoer. Endring av denne innstillingen påvirker ikke eksisterende brukerkontoer.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Når aktivert, kan dokumenter deles offentlig på internett av ethvert medlem av arbeidsområdet",
   "Viewer document exports": "Eksport av dokumentvisning",
   "When enabled, viewers can see download options for documents": "Når aktivert, kan seere se nedlastingsalternativer for dokumenter",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "En ID som unikt identifiserer nettstedet i din Matomo-forekomst.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Oisann, du må akseptere tillatelsene i Notion for å koble til {{ appName }} til ditt arbeidsområde. Prøv igjen?",
   "Import pages from Notion": "Importer sider fra Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Legg til i Slack",
   "document published": "dokument publisert",
   "document updated": "dokument oppdatert",
