--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Link copiado",
+  "Download revision": "Download revision",
   "Dark": "Escuro",
   "Light": "Claro",
   "System": "Sistema",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} publicado",
   "{{userName}} unpublished": "{{userName}} despublicado",
   "{{userName}} moved": "{{userName}} movido",
-  "Export started": "Exportação iniciada",
   "Your file will be available in {{ location }} soon": "Seu arquivo estará disponível em {{ location }} em breve",
   "View": "Ver",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exportação iniciada",
   "A ZIP file containing the images, and documents in the Markdown format.": "Um arquivo ZIP que contém as imagens e documentos no formato Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Um arquivo ZIP contendo as imagens e documentos como arquivos HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Dados estruturados que podem ser usados para transferir dados para outra instância compatível do {{ appName }}.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editado",
   "Revision options": "Opções de revisão",
@@ -709,6 +713,12 @@
   "Add a description": "Adicionar descrição",
   "Signing in": "A iniciar sessão",
   "You can safely close this window once the Outline desktop app has opened": "Pode fechar com segurança esta janela quando a aplicação Outline de ambiente de trabalho abrir",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Erro ao criar comentário",
   "Add a comment": "Adicionar comentário",
   "Add a reply": "Adicionar resposta",
@@ -756,6 +766,7 @@
   "Archived": "Arquivado",
   "Save draft": "Guardar rascunho",
   "Restore version": "Restaurar versão",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ainda sem histórico",
   "Source": "Fonte",
   "Created": "Criado",
@@ -886,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Insert block": "Insert block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Iniciar Sessão",
   "Continue with Email": "Continuar com Email",
   "Continue with {{ authProviderName }}": "Continuar com {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Ligado",
   "Allow members to sign-in using their email address": "Permitir que membros entrem com endereço de email",
   "The server must have SMTP configured to enable this setting": "O servidor requer SMTP configurado para habilitar esta configuração",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Expirado",
   "Last used": "Última utilização",
   "No expiry": "Sem expiração",
   "Restricted scope": "Restricted scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "A processar",
-  "Expired": "Expirado",
   "Completed": "Concluído",
   "Failed": "Falhou",
   "All collections": "Todas as coleções",
@@ -1083,7 +1097,6 @@
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
-  "How does this work?": "Como funciona?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Pode importar um ficheiro ZIP que foi exportado anteriormente a partir da opção JSON de outra instância. Em {{ appName }}, abra <em>Exportar</em> na barra lateral de Configurações e clique em <em>Exportar Dados</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Arraste e solte o ficheiro ZIP da opção de exportação JSON em {{appName}}ou clique para carregar",
   "Canceled": "Canceled",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Requerer que membros sejam convidados para a área de trabalho antes de criar conta utilizando SSO.",
   "Default role": "Papel por defeito",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "O papel por defeito de utilizadores para novas contas. Alterar esta configuração não afeta contas existentes.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Quando ativo, documentos pode ser partilhados publicamente na Internet por qualquer membro da área de trabalho",
   "Viewer document exports": "Documentos exportados de Leitor",
   "When enabled, viewers can see download options for documents": "Quando ativo, leitores podem ver e descarregar opções para documentos",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Um ID que identifica exclusivamente o site na instância Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Adicionar ao Slack",
   "document published": "documento publicado",
   "document updated": "documento atualizado",
