--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -14,7 +14,7 @@
   "Share this collection": "Dela denna samling",
   "Import document": "Importera dokument",
   "Sort in sidebar": "Sortera i sidofältet",
-  "A-Z sort": "A-Z sort",
+  "A-Z sort": "Sortera A-Ö",
   "Z-A sort": "Sortera Ö-A",
   "Manual sort": "Manuell sortering",
   "Search in collection": "Sök i samling",
@@ -113,8 +113,8 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "Ny emoji",
+  "Upload emoji": "Ladda upp emoji",
   "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
@@ -138,12 +138,13 @@
   "Log out": "Logga ut",
   "Mark notifications as read": "Markera alla aviseringar som lästa",
   "Archive all notifications": "Arkivera alla aviseringar",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Markera som läst",
+  "Mark as unread": "Markera som oläst",
   "New App": "Ny App",
   "New Application": "Ny applikation",
   "This version of the document was deleted": "Denna version av dokumentet har tagits bort",
   "Link copied": "Länk kopierad",
+  "Download revision": "Download revision",
   "Dark": "Mörk",
   "Light": "Ljus",
   "System": "System",
@@ -264,9 +265,9 @@
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "Laddar upp",
-  "Add emoji": "Add emoji",
+  "Add emoji": "Lägg till emoji",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
+  "Upload an image": "Ladda upp en bild",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} publicerade",
   "{{userName}} unpublished": "{{userName}} opublicerade",
   "{{userName}} moved": "{{userName}} flyttade",
-  "Export started": "Exportering startad",
   "Your file will be available in {{ location }} soon": "Din fil kommer att finnas tillgänglig i {{ location }} snart",
   "View": "Visa",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exportering startad",
   "A ZIP file containing the images, and documents in the Markdown format.": "En ZIP-fil som innehåller bilder och dokument i Markdown-format.",
   "A ZIP file containing the images, and documents as HTML files.": "En ZIP-fil som innehåller bilder och dokument som HTML-filer.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturerade data som kan användas för att överföra data till en annan kompatibel {{ appName }} instans.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m läst",
   "Revision deleted": "Revision raderad",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Nuvarande version",
   "{{userName}} edited": "{{userName}} redigerade",
   "Revision options": "Alternativ för revidering",
@@ -709,6 +713,12 @@
   "Add a description": "Lägg till en beskrivning",
   "Signing in": "Loggar in",
   "You can safely close this window once the Outline desktop app has opened": "Du kan stänga detta fönster säkert när appen Outline har öppnat",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Fel vid skapande av kommentar",
   "Add a comment": "Lägg till en kommentar",
   "Add a reply": "Lägg till ett svar",
@@ -756,6 +766,7 @@
   "Archived": "Arkiverad",
   "Save draft": "Spara utkast",
   "Restore version": "Återställ version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ingen historik än",
   "Source": "Källa",
   "Created": "Skapad",
@@ -886,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Nämn användare och mer",
   "Insert block": "Infoga block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Logga in",
   "Continue with Email": "Fortsätt med e-post",
   "Continue with {{ authProviderName }}": "Fortsätt med {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Anslut",
   "Allow members to sign-in using their email address": "Tillåt medlemmar att logga in med sin e-postadress",
   "The server must have SMTP configured to enable this setting": "Servern måste ha SMTP konfigurerat för att aktivera denna inställning",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
+  "Expired": "Utgånget",
   "Last used": "Senast använd",
   "No expiry": "Ingen utgång",
   "Restricted scope": "Restricted scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Bearbetar",
-  "Expired": "Utgånget",
   "Completed": "Slutförd",
   "Failed": "Misslyckad",
   "All collections": "Alla samlingar",
@@ -1083,7 +1097,6 @@
   "Date created": "Datum skapad",
   "Crop Image": "Crop Image",
   "Crop image": "Beskär bild",
-  "How does this work?": "Hur fungerar detta?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kan importera en zip-fil som tidigare exporterades från JSON-alternativet i ett annat fall. I {{ appName }}, öppna <em>Exportera</em> i inställningspanelen och klicka på <em>Exportera data</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Dra och släpp zip-filen från JSON-exportalternativet i {{appName}}, eller klicka för att ladda upp",
   "Canceled": "Avbruten",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Kräv att medlemmar blir inbjudna till arbetsytan innan de kan skapa ett konto med SSO.",
   "Default role": "Standardroll",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Standardroll för nya konton. Ändring av denna inställning påverkar inte befintliga användarkonton.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "När detta är aktiverat kan dokument delas offentligt på internet av någon medlem i arbetsytan",
   "Viewer document exports": "Export för visningsdokument",
   "When enabled, viewers can see download options for documents": "När detta är aktiverat kan läsare se hämtningsalternativ för dokument",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Ett ID som unikt identifierar webbplatsen i din Matomo instans.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Importera sidor från Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Lägg till i Slack",
   "document published": "dokument publicerat",
   "document updated": "dokument uppdaterat",
