--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Yeni Uygulama",
   "This version of the document was deleted": "Belgenin bu sürümü silindi",
   "Link copied": "Bağlantı kopyalandı",
+  "Download revision": "Download revision",
   "Dark": "Koyu",
   "Light": "Açık",
   "System": "Sistem",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} yayınladı",
   "{{userName}} unpublished": "{{userName}} yayından kaldırdı",
   "{{userName}} moved": "{{userName}} taşıdı",
-  "Export started": "Dışa aktarma başladı",
   "Your file will be available in {{ location }} soon": "Dosyanız yakında {{ location }}'da kullanılabilir olacak",
   "View": "Görüntüle",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Dışa aktarma başladı",
   "A ZIP file containing the images, and documents in the Markdown format.": "Görselleri ve belgeleri Markdown biçiminde içeren bir ZIP dosyası.",
   "A ZIP file containing the images, and documents as HTML files.": "Görselleri ve belgeleri HTML dosyaları olarak içeren bir ZIP dosyası.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Verileri başka bir uyumlu {{ appName }} örneğine aktarmak için kullanılabilecek yapılandırılmış veri.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}s okuma",
   "{{ minutes }}m read": "{{ minutes }}d okuma",
   "Revision deleted": "Revizyon silindi",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Mevcut sürüm",
   "{{userName}} edited": "{{userName}} düzenledi",
   "Revision options": "Revizyon seçenekleri",
@@ -709,6 +713,12 @@
   "Add a description": "Bir açıklama ekle",
   "Signing in": "Giriş yapılıyor",
   "You can safely close this window once the Outline desktop app has opened": "Outline masaüstü uygulaması açıldıktan sonra bu pencereyi güvenle kapatabilirsiniz",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Yorum oluşturulurken hata oluştu",
   "Add a comment": "Yorum ekle",
   "Add a reply": "Cevap ekle",
@@ -756,6 +766,7 @@
   "Archived": "Arşivlendi",
   "Save draft": "Taslağı kaydet",
   "Restore version": "Sürümü geri yükle",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Henüz tarihçe yok",
   "Source": "Kaynak",
   "Created": "Oluşturuldu",
@@ -886,6 +897,7 @@
   "Triggers": "Tetikleyiciler",
   "Mention users and more": "Kullanıcılardan ve daha fazlasından bahset",
   "Insert block": "Blok ekle",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Giriş Yap",
   "Continue with Email": "E-posta ile devam et",
   "Continue with {{ authProviderName }}": "{{ authProviderName }} ile devam et",
@@ -1017,8 +1029,11 @@
   "Connect": "Bağla",
   "Allow members to sign-in using their email address": "Üyelerin e-posta adreslerini kullanarak oturum açmasına izin ver",
   "The server must have SMTP configured to enable this setting": "Bu ayarı etkinleştirmek için sunucuda SMTP yapılandırılmış olmalıdır",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "geliştirici: {{ name }}",
+  "Expired": "Süresi doldu",
   "Last used": "Son kullanım",
   "No expiry": "Sona erme yok",
   "Restricted scope": "Kısıtlı kapsam",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "İşleniyor",
-  "Expired": "Süresi doldu",
   "Completed": "Tamamlandı",
   "Failed": "Başarısız oldu",
   "All collections": "Tüm koleksiyonlar",
@@ -1083,7 +1097,6 @@
   "Date created": "Oluşturulma tarihi",
   "Crop Image": "Görseli Kırp",
   "Crop image": "Görseli kırp",
-  "How does this work?": "Bu nasıl çalışır?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Daha önce başka bir örnekteki JSON seçeneğinden dışa aktarılmış bir zip dosyasını içe aktarabilirsiniz. {{ appName }} uygulamasında, Ayarlar kenar çubuğunda <em>Dışa Aktar</em>'ı açın ve <em>Verileri Dışa Aktar</em>'a tıklayın.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "{{appName}} uygulamasındaki JSON dışa aktarma seçeneğinden zip dosyasını sürükleyip bırakın veya yüklemek için tıklayın",
   "Canceled": "İptal edildi",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Üyelerin SSO kullanarak bir hesap oluşturmadan önce çalışma alanına davet edilmelerini zorunlu kılın.",
   "Default role": "Varsayılan rol",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Yeni hesaplar için varsayılan kullanıcı rolü. Bu ayarın değiştirilmesi mevcut kullanıcı hesaplarını etkilemez.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Etkinleştirildiğinde, belgeler çalışma alanının herhangi bir üyesi tarafından internet üzerinde herkese açık olarak paylaşılabilir",
   "Viewer document exports": "Görüntüleyici belge dışa aktarmaları",
   "When enabled, viewers can see download options for documents": "Etkinleştirildiğinde, görüntüleyiciler belgeler için indirme seçeneklerini görebilir",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Matomo örneğinizde web sitesini benzersiz şekilde tanımlayan bir kimlik.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Hata, {{ appName }} uygulamasını çalışma alanınıza bağlamak için Notion'daki izinleri kabul etmeniz gerekiyor. Tekrar deneyin?",
   "Import pages from Notion": "Notion'dan sayfaları içe aktar",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Slack'e Ekle",
   "document published": "belge yayınlandı",
   "document updated": "belge güncellendi",
