--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -144,6 +144,7 @@
   "New Application": "Ứng dụng mới",
   "This version of the document was deleted": "Phiên bản của tài liệu đã bị xóa",
   "Link copied": "Đã sao chép Link",
+  "Download revision": "Download revision",
   "Dark": "Dark",
   "Light": "Light",
   "System": "Hệ thống",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} đã đăng tải",
   "{{userName}} unpublished": "{{userName}} bỏ đăng tải",
   "{{userName}} moved": "{{userName}} đã chuyển",
-  "Export started": "Đã bắt đầu xuất",
   "Your file will be available in {{ location }} soon": "Tệp của bạn sẽ sớm có ở {{ location }}",
   "View": "Hiển thị",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Đã bắt đầu xuất",
   "A ZIP file containing the images, and documents in the Markdown format.": "Tệp ZIP chứa hình ảnh và tài liệu ở định dạng Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Tệp ZIP chứa hình ảnh và tài liệu ở định dạng Markdown.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Dữ liệu có cấu trúc có thể được sử dụng để truyền dữ liệu sang một phiên bản {{ appName }} tương thích khác.",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} phút đọc ",
   "Revision deleted": "Phiên bản đã được xóa",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Phiên bản hiện tại",
   "{{userName}} edited": "{{userName}} đã chỉnh sửa",
   "Revision options": "Tùy chọn sửa đổi",
@@ -709,6 +713,12 @@
   "Add a description": "Thêm mô tả",
   "Signing in": "Đang đăng nhập",
   "You can safely close this window once the Outline desktop app has opened": "Bạn có thể đóng cửa sổ này một cách an toàn sau khi ứng dụng Outline trên máy tính đã mở",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Lỗi khi tạo bình luận",
   "Add a comment": "Thêm một bình luận",
   "Add a reply": "Thêm một trả lời",
@@ -756,6 +766,7 @@
   "Archived": "Đã lưu trữ",
   "Save draft": "Save draft",
   "Restore version": "Khôi phục phiên bản",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Chưa có lịch sử",
   "Source": "Nguồn",
   "Created": "Được tạo",
@@ -886,6 +897,7 @@
   "Triggers": "Yếu tố kích hoạt",
   "Mention users and more": "Mention users and more",
   "Insert block": "Chèn khối",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Đăng nhập",
   "Continue with Email": "Tiếp tục với email",
   "Continue with {{ authProviderName }}": "Tiếp tục với {{ authProviderName }}",
@@ -1017,8 +1029,11 @@
   "Connect": "Kết nối",
   "Allow members to sign-in using their email address": "Cho phép thành viên đăng nhập bằng địa chỉ email của họ",
   "The server must have SMTP configured to enable this setting": "Máy chủ phải được định cấu hình SMTP để bật cài đặt này",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Hết hạn",
   "Last used": "Last used",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Đang xử lý",
-  "Expired": "Hết hạn",
   "Completed": "Hoàn thành",
   "Failed": "Thất bại",
   "All collections": "Tất cả bộ sưu tập",
@@ -1083,7 +1097,6 @@
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
-  "How does this work?": "Nó hoạt động như thế nào?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Bạn có thể nhập tệp zip đã được xuất trước đó từ tùy chọn JSON trong một phiên bản khác. Trong {{ appName }}, mở <em>Xuất</em> trong thanh bên Cài đặt và nhấp vào <em>Xuất dữ liệu</em>.",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "Kéo và thả tệp zip từ tùy chọn xuất JSON trong {{appName}} hoặc nhấp để tải lên",
   "Canceled": "Canceled",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Yêu cầu các thành viên được mời vào không gian làm việc trước khi họ có thể tạo tài khoản bằng SSO.",
   "Default role": "Vai trò mặc định",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Vai trò người dùng mặc định cho các tài khoản mới. Việc thay đổi cài đặt này không ảnh hưởng đến các tài khoản người dùng hiện có.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Khi được bật, tài liệu có thể được chia sẻ công khai trên internet bởi bất kỳ thành viên nào trong không gian làm việc",
   "Viewer document exports": "Xuất tài liệu của người xem",
   "When enabled, viewers can see download options for documents": "Khi được bật, người xem có thể thấy các tùy chọn tải xuống tài liệu",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Thêm vào Slack",
   "document published": "tài liệu được đăng tải",
   "document updated": "tài liệu được cập nhật",
