--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -144,6 +144,7 @@
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "已複製連結",
+  "Download revision": "Download revision",
   "Dark": "深色",
   "Light": "淺色",
   "System": "依照系統",
@@ -293,9 +294,10 @@
   "{{userName}} published": "{{userName}} 已將其發布",
   "{{userName}} unpublished": "{{userName}} 已取消將其發布",
   "{{userName}} moved": "{{userName}} 將其移動",
-  "Export started": "已經開始匯出",
   "Your file will be available in {{ location }} soon": "您的文件將很快將出現在 {{ location }} 中",
   "View": "檢視",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "已經開始匯出",
   "A ZIP file containing the images, and documents in the Markdown format.": "包含圖片和 Markdown 格式文件的 ZIP 文件。",
   "A ZIP file containing the images, and documents as HTML files.": "包含圖片和 HTML 格式文件的 ZIP 文件。",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "可用於將資料傳輸到另一個相容的 {{ appName }} 實例的結構化資料。",
@@ -386,6 +388,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "「{{ minutes }}分鐘閱讀」",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "目前版本",
   "{{userName}} edited": "{{userName}} 已編輯",
   "Revision options": "修訂版本選項",
@@ -709,6 +713,12 @@
   "Add a description": "新增描述",
   "Signing in": "正在登入",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面應用程式打開後，您可以安全地關閉此視窗",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "留言時發生錯誤",
   "Add a comment": "新增留言",
   "Add a reply": "新增回覆…",
@@ -756,6 +766,7 @@
   "Archived": "已封存",
   "Save draft": "儲存草稿",
   "Restore version": "還原版本",
+  "Highlight changes": "Highlight changes",
   "No history yet": "暫無歷史紀錄",
   "Source": "來源",
   "Created": "建立日期",
@@ -886,6 +897,7 @@
   "Triggers": "觸發器",
   "Mention users and more": "Mention users and more",
   "Insert block": "插入區塊",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "登入",
   "Continue with Email": "使用電子郵件以繼續",
   "Continue with {{ authProviderName }}": "使用 {{ authProviderName }} 以繼續",
@@ -1017,8 +1029,11 @@
   "Connect": "連結",
   "Allow members to sign-in using their email address": "允許成員使用他們的電子郵件地址登入",
   "The server must have SMTP configured to enable this setting": "伺服器必須有已組態的 SMTP 才能啟用此設定",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "来自 {{ name }}",
+  "Expired": "已逾時",
   "Last used": "最近使用",
   "No expiry": "永久有效",
   "Restricted scope": "範圍受限",
@@ -1045,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "正在處理",
-  "Expired": "已逾時",
   "Completed": "已完成",
   "Failed": "失敗",
   "All collections": "所有的文件集",
@@ -1083,7 +1097,6 @@
   "Date created": "創建日期",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
-  "How does this work?": "這是如何運作的？",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "你可以輸入自先前其他實例透過JSON選項輸出的zip檔案。在{{ appName }}中，在側邊欄的設定中打開<em>匯出</em>並且選取<em>匯出資料</em>。",
   "Drag and drop the zip file from the JSON export option in {{appName}}, or click to upload": "請將從 {{appName}} 的 JSON 匯出選項中匯出的 zip 檔案拖放到此處，或點擊上傳",
   "Canceled": "已取消",
@@ -1227,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "成員必須先受邀加入工作區，才能使用 SSO 建立帳號。",
   "Default role": "預設角色",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "預設角色設定只會套用到新的使用者帳號。改變此設定並不會影響現有使用者帳號。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "啟用後，工作區中的任何成員都可以在網際網絡上公開共享工作區中的文件",
   "Viewer document exports": "檢視者可匯出文件",
   "When enabled, viewers can see download options for documents": "啓用時，檢視者可以看到文件的下載選項",
@@ -1365,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "從 Notion 匯入文件",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "新增到 Slack",
   "document published": "已發佈文件",
   "document updated": "已更新文件",
